no reminder of autosubmit

--- a/index.html
+++ b/index.html
@@ -482,9 +482,9 @@ label.required::after {
 
       let welcomeText;
       if(isAuto){
-        welcomeText = `Welcome back ${name}, <strong>please select why you are here today.</strong><br>This page will submit in 20 seconds.`;
+        welcomeText = `Welcome back ${name}, <strong>please select why you are here today.</strong>.`;
       } else {
-        welcomeText = `Welcome ${name}, <strong>please select why you are here today.</strong><br>This page will submit in 20 seconds.`;
+        welcomeText = `Welcome ${name}, <strong>please select why you are here today.</strong>`;
       }
         /*
         const welcomeText = isAuto
