--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ label.required::after {
 
       let welcomeText;
       if(isAuto){
-        welcomeText = `Welcome back ${name}, <strong>please select why you are here today.</strong>.`;
+        welcomeText = `Welcome back ${name}, <strong>please select why you are here today.</strong>`;
       } else {
         welcomeText = `Welcome ${name}, <strong>please select why you are here today.</strong>`;
       }
